Arrumando as perguntas e as APIS